# invasion

./: .gitignore  .gitmodules  CONTRIBUTORS  README.md
docs/: heading-template.txt
mp/src/: .clang-format  CMakeLists.txt
mp/src/docs/: template.txt
mp/src/fgdlib/: CMakeLists.txt
mp/src/game/client/: c_baseentity.h  c_vguiscreen.cpp  cbase.h  client_hl2mp.vpc  clientshadowmgr.cpp  detailobjectsystem.cpp  fx_impact.cpp  fx_water.cpp  fx_water.h  physics_main_client.cpp
mp/src/game/client/fortress/: c_baseobject.cpp  c_obj_barbed_wire.cpp  c_tf_hintmanager.cpp  c_weapon_builder.cpp  clientmode_tfnormal.cpp  clientmode_tfnormal.h  hud_ammo.cpp  hud_timer.cpp  hud_version.cpp
mp/src/game/server/: baseentity.h  props.cpp
mp/src/game/server/fortress/: controlzone.cpp  controlzone.h  info_act.cpp  info_act.h  info_customtech.cpp  info_customtech.h  npc_bug_warrior.cpp  orders.cpp  orders.h  tf_client.cpp  tf_func_no_build.cpp  tf_obj.cpp  tf_obj.h  tf_obj_barbed_wire.cpp  tf_obj_barbed_wire.h  tf_playerclass.cpp  tf_playerclass.h
mp/src/game/shared/: baseviewmodel_shared.h  gamemovement.cpp  physics_main_shared.cpp
mp/src/game/shared/fortress/: plasmaprojectile.cpp  tf_gamemovement.cpp  tf_gamemovement.h  tf_gamerules.cpp  tf_shareddefs.cpp  weapon_builder.cpp  weapon_combat_shotgun.cpp  (+4 more)
mp/src/materialsystem/stdshaders/: buildinvasionshaders.bat  buildsdkshaders.bat  game_shader_dx9_hl2mp.vpc  pbr_dx9.cpp  stdshader_dx9_20b.txt
mp/src/public/fgdlib/: gamedata.h
mp/src/tier1/: CMakeLists.txt
mp/src/vpc_scripts/: source_win32_base.vpc
